# text-to-speech-app

./: LICENSE  README.md  create_shortcut.py  gitignore  pyproject.toml  requirements.txt
kaori_voice_studio/: app.py  create_shortcut.py  patch_melotts.py  updater.py  version.py
kaori_voice_studio/cloned_voices/: kaori_config.json  kaori_embedding.pth  kaori_voice_config.json  kaori_voice_embedding.npy  kaori_voice_info.txt
