[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaori-voice-studio"
dynamic = ["version"]
description = "A desktop Text-to-Speech app powered by Microsoft Edge Neural Voices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["tts", "text-to-speech", "edge-tts", "voice", "audio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Environment :: X11 Applications",
]

dependencies = [
    "edge-tts>=6.1.9",
    "pygame-ce>=2.5.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro-onnx>=0.4.9",
    "soundfile>=0.12.1",
]

[project.gui-scripts]
kaori-voice-studio = "kaori_voice_studio.app:main"

[project.scripts]
kaori-voice-studio-setup = "kaori_voice_studio.create_shortcut:main"

[tool.setuptools.dynamic]
version = {attr = "kaori_voice_studio.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["kaori_voice_studio*"]

[tool.setuptools.package-data]
kaori_voice_studio = ["*.ico", "cloned_voices/*"]